# Projeto_Northwind

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/python/: Analise_Dados.py
app/sql/: customers.sql  expedidor.sql  fornecedores.sql  funcionarios.sql  ordens.sql  order_details.sql  produtos.sql  produtos_mais_vendidos.sql  região.sql  territorio.sql
dbt_northwind/models/: mais_vendido.sql
