[project]
name = "projeto-northwind"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Souza",email = "leo.armster1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "pyest (>=0.2.2,<0.3.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=1.16.11,<2.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "pymdown-extensions (>=10.15,<11.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
